fix horizontal scrolling

--- a/FlaskApp/FlaskApp/static/onecall.css
+++ b/FlaskApp/FlaskApp/static/onecall.css
@@ -65,7 +65,7 @@
 
 .colorblock {
   font-size:25px; 
-  margin: 0px -30px;
+  margin: 0px -8px;
   padding: 50px 35px;
 } 
 
